--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "browserify": "^11.2.0",
     "express": "^4.13.3",
+    "grunt": "^0.4.5",
     "http": "0.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "~0.13.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.3",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-react": "^0.12.3",
+    "load-grunt-tasks": "^3.3.0",
+    "react-router": "^0.13.4"
   }
 }
