--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "author": "Phil Dornfeld",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "browserify": "^11.2.0",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
     "http": "0.0.0",
+    "jquery": "^2.1.4",
+    "mysql": "^2.9.0",
     "path": "^0.12.7",
-    "react": "~0.13.0"
+    "react": "~0.13.0",
+    "reflux": "^0.3.0",
+    "sequelize": "^3.12.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -24,6 +29,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-react": "^0.12.3",
+    "grunt-sass": "^1.0.0",
     "load-grunt-tasks": "^3.3.0",
     "react-router": "^0.13.4"
   }
