--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "react": "~0.13.0",
     "reflux": "^0.3.0",
+    "request": "^2.65.0",
     "sequelize": "^3.12.1"
   },
   "devDependencies": {
