--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "browserify": "^11.2.0",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "grunt": "^0.4.5",
     "http": "0.0.0",
     "jquery": "^2.1.4",
     "mysql": "^2.9.0",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "~0.13.0",
     "reflux": "^0.3.0",
