--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "~0.13.0",
     "reflux": "^0.3.0",
     "request": "^2.65.0",
-    "sequelize": "^3.12.1"
+    "sequelize": "^3.12.1",
+    "ws": "^0.8.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
