--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "pg": "^4.4.3",
+    "pg-hstore": "^2.3.2",
+    "pg-native": "^1.9.0",
     "react": "~0.13.0",
     "reflux": "^0.3.0",
     "request": "^2.65.0",
