--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "reflux": "^0.3.0",
     "request": "^2.65.0",
     "sequelize": "^3.12.1",
-    "ws": "^0.8.0"
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
