--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babelify": "^7.2.0",
     "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.3",
+    "grunt-babel": "^6.0.0",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
