--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.9.0",
     "react": "~0.13.0",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
     "reflux": "^0.3.0",
     "request": "^2.65.0",
     "sequelize": "^3.12.1",
