--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "Draft your Bracket",
   "main": "server/server.js",
+  "repository": "https://github.com/phillydorn/CAProject.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Phil Dornfeld",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.1.2",
+    "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.0",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
-    "browserify": "^11.2.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
@@ -26,27 +27,35 @@
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.9.0",
-    "react": "~0.13.0",
+    "react": "^0.14.3",
     "react-dnd": "^2.0.2",
     "react-dnd-html5-backend": "^2.0.0",
+    "react-dom": "^0.14.3",
+    "react-draggable": "^1.1.3",
     "reflux": "^0.3.0",
     "request": "^2.65.0",
     "sequelize": "^3.12.1",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   },
   "devDependencies": {
-    "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
+    "browserify-zlib": "^0.1.4",
+    "css-loader": "^0.23.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
-    "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-react": "^0.12.3",
     "grunt-sass": "^1.0.0",
+    "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.3.0",
-    "react-router": "^0.13.4"
+    "react-router": "^0.13.4",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "webpack-dev-server": "^1.14.0"
   }
 }
