--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "grunt": "^0.4.5",
+    "history": "^1.17.0",
     "http": "0.0.0",
     "jquery": "^2.1.4",
     "mysql": "^2.9.0",
@@ -32,6 +33,7 @@
     "react-dnd-html5-backend": "^2.0.0",
     "react-dom": "^0.14.3",
     "react-draggable": "^1.1.3",
+    "react-router": "^0.13.3",
     "reflux": "^0.3.0",
     "request": "^2.65.0",
     "sequelize": "^3.12.1",
@@ -43,7 +45,6 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
-    "browserify-zlib": "^0.1.4",
     "css-loader": "^0.23.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
@@ -53,7 +54,7 @@
     "grunt-sass": "^1.0.0",
     "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.3.0",
-    "react-router": "^0.13.4",
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack-dev-server": "^1.14.0"
