--- a/package.json
+++ b/package.json
@@ -36,14 +36,17 @@
     "react-router": "^0.13.3",
     "reflux": "^0.3.0",
     "request": "^2.65.0",
+    "requires-port": "^1.0.0",
     "sequelize": "^3.12.1",
     "socket.io": "^1.3.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.2.0",
     "css-loader": "^0.23.0",
     "grunt": "^0.4.5",
